# csc299-project

./: .gitignore  DOCUMENTATION.md  README.md  SPECIFICATION  SPECIFICATION.md  SUMMARY.md  TESTS.md  pyproject.toml  v.mod
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
ai-conversation/: README.md
final/: __init__.py  ai_agents.py  config.py  main.py  models.py  pkms.py  storage.py  task_manager.py  video.txt part 1
final/data/: notes.json  tasks.json
specs/001-drawing-tasks-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-drawing-tasks-cli/checklists/: requirements.md
src/: __init__.py
src/cli/: README.md  __init__.py  main.py
src/cli/commands/: __init__.py  add.py  list.py
src/models/: __init__.py  task.py
src/storage/: README.md  __init__.py  file_storage.py  task_manager.py
tasks1/: README.md  tasks.json  tasks.py
tasks2/: app.py  users.json
tasks3/src/tasks3/: __init__.py  app.py
tasks3/tasks2/: tasks_yakshmadhu17.json
tasks3/tests/: test_app_logic.py  test_inc.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: main.py
tasks4/src/tasks4.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_storage.py  test_task_manager.py
